--- a/home.css
+++ b/home.css
@@ -60,7 +60,7 @@ img#menu_icon {
 
 #menu h1#menu_title {
 	text-decoration: underline;
-	color: white;
+	color: #d4a154;
 	margin: 50px 0 0 0;
 	text-align: center;
 	font-size: 30px;
@@ -103,14 +103,14 @@ img#menu_icon {
 
 #dew_1 {
 	margin: 60px 0 0 0;
+	background-image: url("images/dew_1_mobile.jpg");
+	background-size: cover;
 }
 
 img#logo_green {
-	position: absolute;
 	z-index: 0;
-	top: 200px;
-	left: 20%;
-	width: 60%;
+	margin: 50px 0 200px 0;
+	width: 100%;
 }
 
 .main .content {
