--- a/home.css
+++ b/home.css
@@ -113,37 +113,45 @@ img#logo_green {
 	width: 100%;
 }
 
-.main .content {
-	position: relative;
-	bottom: 500px;
-	width: 80%;
-}
-
-#dew_4 {
-	position: relative;
-	top: -500px;
+#dew_2 .content {
+	background-image: url("images/dew_2_mobile.jpg");
+	background-size: cover;
+	padding-bottom: 40px;
 }
 
 #dew_2 .content img {
-	border-right: medium solid;
-	border-color: #AFD9A7;
-	margin-left: 15%;
-	margin-right: 10%;
-	padding-bottom: 100px;
-	padding-right: 10%;
-	width: 200px;
-	float: left;
+	margin: 40px 25% 0;
+	width: 50%;
 }
 
-#dew_2 .content h1, h3 {
+#about {
+	margin: 0 5%;
+}
+
+#about h3 {
 	color: #737373;
 }
 
-#menu_button a {
+#about h1 {
+	color: #d4a154;
+}
+
+#dew_3 {
+	background-image: url("images/dew_3.png");
+	background-size: cover;
+	padding: 80px 0;
+}
+
+#dew_3 h2 {
+	text-align: center;
+}
+
+#dew_3 a {
 	border: medium solid;
 	border-color: #737373;
 	text-decoration: none;
-	color: #737373;
+	color: white;
+	background-color: #adcacc;
 }
 
 @media screen and (min-width: 700px) {
