--- a/home.css
+++ b/home.css
@@ -49,7 +49,7 @@ video#intro_video {
 .hexTop,
 .hexBottom {
   position: absolute;
-  z-index: 15;
+  z-index: 16;
   width: 84.85px;
   height: 84.85px;
   overflow: hidden;
@@ -182,6 +182,7 @@ img#menu_icon {
 }
 
 #dew_1 {
+  margin-top: 60px;
   background-image: url("images/dew_1_mobile.jpg");
   background-size: cover;
 }
