Fix font (change to poiret one)

--- a/home.css
+++ b/home.css
@@ -4,7 +4,7 @@
 }
 
 body h1, h2, h3, a {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Poiret One', 'sans-serif';
     font-weight: normal;
 }
 
